[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui-assets/building-gridlets.svg" type="Texture" id=1]
[ext_resource path="res://RestZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level0Drawer.gd" type="Script" id=3]
[ext_resource path="res://FlaxMachine/Loom.tscn" type="PackedScene" id=4]
[ext_resource path="res://FlaxMachine/Dyeing.tscn" type="PackedScene" id=5]
[ext_resource path="res://FlaxMachine/Packager.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 80, 80 )

[node name="Level0Drawer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 256.0
margin_right = -1424.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridMachine" type="Area2D" parent="."]

[node name="Gridlets00" type="Sprite" parent="GridMachine"]
position = Vector2( 168, 264 )
texture = ExtResource( 1 )

[node name="CollisionShape00" type="CollisionShape2D" parent="GridMachine"]
position = Vector2( 168, 264 )
shape = SubResource( 1 )

[node name="Gridlets01" type="Sprite" parent="GridMachine"]
position = Vector2( 336, 264 )
texture = ExtResource( 1 )

[node name="CollisionShape01" type="CollisionShape2D" parent="GridMachine"]
position = Vector2( 336, 264 )
shape = SubResource( 1 )

[node name="Gridlets10" type="Sprite" parent="GridMachine"]
position = Vector2( 168, 432 )
texture = ExtResource( 1 )

[node name="CollisionShape10" type="CollisionShape2D" parent="GridMachine"]
position = Vector2( 168, 432 )
scale = Vector2( 1, 0.99538 )
shape = SubResource( 1 )

[node name="Gridlets11" type="Sprite" parent="GridMachine"]
position = Vector2( 336, 432 )
texture = ExtResource( 1 )

[node name="CollisionShape11" type="CollisionShape2D" parent="GridMachine"]
position = Vector2( 336, 432 )
shape = SubResource( 1 )

[node name="RestZone00" parent="." instance=ExtResource( 2 )]
position = Vector2( 168, 264 )

[node name="RestZone01" parent="." instance=ExtResource( 2 )]
position = Vector2( 336, 264 )

[node name="RestZone10" parent="." instance=ExtResource( 2 )]
position = Vector2( 168, 432 )

[node name="RestZone11" parent="." instance=ExtResource( 2 )]
position = Vector2( 336, 432 )

[node name="MachineDyeing" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( 120, 624 )

[node name="MachinePackager" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 336, 640 )

[node name="MachineLoom" parent="." instance=ExtResource( 4 )]
position = Vector2( 120, 88 )
